--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,8 +4,9 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteCond %{ENV:HTTPS} !on
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
